det var jätte kult med labben

--- a/lab1/Makefile
+++ b/lab1/Makefile
@@ -1,10 +1,43 @@
-# The following rule means: "if ltest is older than ltest.o or list.o,
-# then link ltest".
-ltest: ltest.o list.o
-	g++ -o ltest ltest.o list.o
+# Define the compiler and the linker. The linker must be defined since
+# the implicit rule for linking uses CC as the linker. g++ can be
+# changed to clang++.
+CXX = g++
+CC  = g++
 
-# Rules to create the object files.
-ltest.o: ltest.cc list.h
-	g++ -c ltest.cc -std=c++11
-list.o: list.cc list.h
-	g++ -c list.cc -std=c++11
+# Define preprocessor, compiler, and linker flags. Uncomment the # lines
+# if you use clang++ and wish to use libc++ instead of GNU's libstdc++.
+# -g is for debugging.
+CPPFLAGS =  -std=c++11
+CXXFLAGS =  -O2 -Wall -Wextra -pedantic-errors -Wold-style-cast
+CXXFLAGS += -std=c++11
+CXXFLAGS += -g
+LDFLAGS =   -g
+#CPPFLAGS += -stdlib=libc++
+#CXXFLAGS += -stdlib=libc++
+#LDFLAGS +=  -stdlib=libc++
+
+# Targets
+PROGS = ltest
+
+all: $(PROGS)
+
+# Targets rely on implicit rules for compiling and linking
+ltest: ltest.o list.o
+
+# Phony targets
+.PHONY: all clean
+
+# Standard clean
+clean:
+	rm -f *.o $(PROGS)
+
+# Generate dependencies in *.d files
+%.d: %.cc
+	@set -e; rm -f $@; \
+         $(CPP) -MM $(CPPFLAGS) $< > $@.$$$$; \
+         sed 's,\($*\)\.o[ :]*,\1.o $@ : ,g' < $@.$$$$ > $@; \
+         rm -f $@.$$$$
+
+# Include the *.d files
+SRC = $(wildcard *.cc)
+include $(SRC:.cc=.d)
