--- a/projekt/clientserver/test/Makefile
+++ b/projekt/clientserver/test/Makefile
@@ -26,7 +26,7 @@ all: $(PROGS)
 # Targets rely on implicit rules for compiling and linking
 # The dependency on libclientserver.a is not defined.
 myserver: myserver.o 
-myclient: myclient.o ClientInterpreter.o GeneralInterpreter.o
+myclient: myclient.o ClientInterpreter.o GeneralInterpreter.o ServerInterpreter.o
 
 
 # Phony targets
